<resources>
    <string name="title_activity_test">test</string>
    <string name="app_name">CSE110_Project</string>

    // General buttons
    <string name="routesButton">Routes</string>
    <string name="homeButton">Home</string>
    <string name="teamButton">Team</string>
    <string name="mockingButton">DEV</string>
    <string name="startWalkButton">Start Walk</string>
    <string name="stopWalkButton">Stop Walk</string>
    <string name="cancelButton">CANCEL</string>
    <string name="saveButton">Save</string>
    <string name="submitButton">Submit</string>
    <string name="backButton">Back</string>
    <string name="acceptButton">Accept</string>
    <string name="declineButton">Decline</string>

    // General text
    <string name="favText">FAV</string>
    <string name="stepsText">Steps</string>
    <string name="milesText">Miles</string>
    <string name="emptyText"> </string>
    <string name="noDataText">N/A</string>
    <string name="defaultSteps">0</string>
    <string name="defaultMiles">0.0</string>
    <string name="defaultTime">00:00</string>

    // Home screen
    <string name="homeHeader">Walk Walk Revolution</string>
    <string name="homeTeamText">Team updates:</string>
    <string name="dailyDataText">Today, you walked…</string>
...
    <string name="difficultyHard">Difficult</string>
    <string name="routeNotesPrompt">Enter notes for this route (optional)</string>
    <string name="routeNotesHint">Notes for this route</string>

    // Mocking screen
    <string name="mockingStepsPrompt">Tap to add steps</string>
    <string name="mockingStepsButton">+500</string>
    <string name="mockingTimePrompt">Enter the current time</string>
    <string name="mockingTimeHint">00:00</string>
    <string name="mockingTimeError">Invalid time format. Please try again</string>
    <string name="mockingTimeSuccess">Saved</string>

    // Route details Screen
...
